--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <meta name="apple-mobile-web-app-title" content="Axtrain" />
     <link rel="manifest" href="/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Axtrain -  бронирование мест на поезда с хорошей системой рекомендаций, классным интерфейсом и низкими ценами."
+    />
+    <meta
+      name="keywords"
+      content="поезд, бронь, бронирование, поезда, заказ, axtrain"
+    />
     <title>Axtrain</title>
   </head>
   <body>
